# anytool

./: .dockerignore  .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  TEST_PLAN.md  fly.toml  pyproject.toml  requirements.txt  test_docusign_live.py  test_live.py  test_nango_live.py  test_token_refresh.py  test_triggers_live.py
.github/workflows/: deploy-web.yml  deploy.yml  publish-sdk.yml
anyapi/: __init__.py  client.py  executor.py
anyapi/apps/: registry.py
anyapi/auth/: models.py  nango.py  oauth.py  token_store.py
anyapi/specs/: base.py  docusign.py  freshdesk.py  google.py  hubspot.py  slack.py
anyapi/tools/: langchain.py
anyapi/triggers/: base.py  engine.py  pollers.py  store.py
anytool/: __init__.py  client.py  executor.py  webhook.py
anytool/apps/: registry.py
anytool/auth/: __init__.py  models.py  oauth.py  token_store.py
anytool/core/: __init__.py  auth_bridge.py  engine.py  executor.py  loader.py  models.py
anytool/specs/: docusign.py  freshdesk.py  github.py  google.py  hubspot.py  slack.py  whatsapp.py  zendesk.py
anytool/static/: anytool-connect.d.ts  anytool-connect.js
anytool/tools/: langchain.py  openai.py
anytool/triggers/: base.py  engine.py  loader.py  pollers.py  store.py
nginx/: api-anytool.conf
registry/: SPEC_FORMAT.md
registry/airtable/: create_records.yaml  delete_records.yaml  get_base_schema.yaml  get_record.yaml  list_bases.yaml  list_records.yaml  update_records.yaml
registry/asana/: create_project.yaml  create_task.yaml  delete_task.yaml  get_project.yaml  get_task.yaml  list_sections.yaml  list_tasks.yaml  search_tasks.yaml  update_task.yaml
registry/calendly/: cancel_event.yaml  get_event.yaml  get_user.yaml  list_event_types.yaml  list_events.yaml  list_invitees.yaml
registry/clickup/: add_comment.yaml  create_task.yaml  delete_task.yaml  get_task.yaml  list_folders.yaml  list_spaces.yaml  list_tasks.yaml  update_task.yaml
registry/docusign/: create_envelope.yaml  get_envelope.yaml  get_recipients.yaml  list_envelopes.yaml  resend_envelope.yaml  void_envelope.yaml
registry/freshdesk/: add_note.yaml  create_ticket.yaml  delete_ticket.yaml  get_conversations.yaml  get_ticket.yaml  list_agents.yaml  (+4 more)
scripts/: migrate_specs.py  spec_builder.py  test_docusign_live.py  test_live.py  test_token_refresh.py  test_triggers_live.py  test_v2_live.py  upload_icons.sh
server/: auth.py  config.py  database.py  engine.py  engine_v2.py  main.py  rate_limit.py  token_store.py  trigger_engine.py
tests/: test_core.py  test_v2_core.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+231 files in other folders)
