[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anytool"
version = "0.1.2"
description = "Agent-native API integration SDK. Curated specs. Direct execution. Zero wrappers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ayudo", email = "hi@ayudo.ai" },
]
keywords = ["ai", "agent", "api", "oauth", "integrations", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
platform = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]
all = ["anytool[langchain]", "anytool[platform]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ayudo-ai/anytool"
Documentation = "https://github.com/ayudo-ai/anytool#readme"

[tool.hatch.build.targets.wheel]
packages = ["anytool"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
